--- a/src/app/component/employee-position/dialog-update-employee-position.html
+++ b/src/app/component/employee-position/dialog-update-employee-position.html
@@ -1,19 +1,19 @@
 <div style="width: 30vw; padding: 1em">
-    <h1 mat-dialog-title>Position</h1>
+    <h1 mat-dialog-title>Update Position Name</h1>
     <form>
         <div mat-dialog-content>
             <div>
                 <mat-form-field class="example-full-width" appearance="outline" style="width: 100%;">
                     <mat-label>Input Position Name</mat-label>
                     <input type="text" aria-label="Name" matInput required [formControl]="email"
-                        [(ngModel)]="getDepartment.name">
+                        [(ngModel)]="updatePosition.name">
                     <mat-error>{{ getErrorMessage()}}</mat-error>
                 </mat-form-field>
             </div>
         </div>
         <div mat-dialog-actions>
             <button mat-button mat-dialog-close color="warn">Cancel</button>
-            <button type="submit" mat-raised-button color="primary" (click)="addPosition()">Add</button>
+            <button type="submit" mat-raised-button color="primary" (click)="editPosition()">Update</button>
         </div>
     </form>
 </div>
