--- a/src/app/component/employee-position/employee-position.component.html
+++ b/src/app/component/employee-position/employee-position.component.html
@@ -14,7 +14,48 @@
         <h4 style="margin-left: 3px;">/ Position </h4>
     </div>
 </div>
-<div style="margin: 0.8em">
+<div style="margin: 0.8em;">
+    <!--Table section-->
+    <div style="margin-top: 1em; margin-bottom: -1em;">
+        <h3>All Department</h3>
+    </div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 table__section" style="width: 100%;">
+        <!-- Position Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef>No</th>
+            <td mat-cell *matCellDef="let element">{{element.id}}</td>
+        </ng-container>
 
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Position</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+        </ng-container>
 
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="primary" class="edit" (click)="openUpdateDialog(element.id)">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warn" class="warn" (click)="openDeleteDialog(element.id)">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="duration">
+            <th mat-header-cell *matHeaderCellDef>Duration</th>
+            <td mat-cell *matCellDef="let element">
+                <div>1 day</div>
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+
+        </tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]" showFirstLastButtons aria-label="Select page of Department">
+    </mat-paginator>
+    <mat-spinner *ngIf="spinner" style="margin: 0 auto;"></mat-spinner>
 </div>
