--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -59,7 +59,7 @@
                     <mat-icon class="menu-button" [ngClass]="{'rotated' : showReport}">arrow_drop_up</mat-icon>
                   </button>
                 </mat-list-item>
-                <div style="padding: 0 0 0 40px;" class="submenu" [ngClass]="{'expanded' : showReport}">
+                <div style="padding: 0 0 0 40px;" class="subreport" [ngClass]="{'expanded' : showReport}">
                     <mat-list-item>
                         <a style="margin:0 -60px 0 -16px; padding: 10px 3.4rem 10px 16px" routerLink="/report/employee" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <!-- <mat-icon>people</mat-icon> -->
@@ -98,7 +98,7 @@
                         </a>
                     </mat-list-item>
                     <mat-list-item>
-                        <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                        <a routerLink="/employee/detail/1" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <!-- <mat-icon>people</mat-icon> -->
                             <h3>Employee</h3>
                         </a>
