--- a/src/app/component/change-password/change-password.component.html
+++ b/src/app/component/change-password/change-password.component.html
@@ -41,7 +41,8 @@
                     </div>
                 </div>
                 <div style="display: flex; flex-direction: row">
-                    <button mat-button color="warn" style="height: 45px;">Cancel</button>
+                    <a routerLink="/account/dashboard"> <button mat-button color="warn"
+                            style="height: 45px;">Cancel</button></a>
                     <button mat-raised-button type="submit"
                         style="background-color: #F89926; color: white; font-weight: 500; height: 45px;"
                         (click)="apply()">Apply
