--- a/src/app/component/leave-type/leave-type.component.html
+++ b/src/app/component/leave-type/leave-type.component.html
@@ -1,1 +1,56 @@
-<p>leave-type works!</p>
+<div style="overflow-y: hidden;">
+    <div style="display: flex; justify-content: space-between;">
+        <h1 class="mat-h1" style="font-weight: 500;">Leave Type</h1>
+        <button mat-raised-button (click)="openDialog()" color="primary">
+            <mat-icon>add_box
+            </mat-icon> Add Leave Type
+        </button>
+
+    </div>
+    <div style=" display: flex; flex-direction: row">
+        <a routerLink="/account/dashboard">
+            <h4>Dashboard</h4>
+        </a>
+        <h4 style="margin-left: 3px;">/ Leave Type </h4>
+    </div>
+</div>
+<div style="margin: 0.8em;">
+    <!--Table section-->
+    <div style="margin-top: 1em; margin-bottom: -1em;">
+        <h3>All Leave Type</h3>
+    </div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 table__section" style="width: 100%;">
+        <!-- Position Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef>Id</th>
+            <td mat-cell *matCellDef="let element">{{element.id}}</td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Leave Type</th>
+            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="primary" class="edit" (click)="openUpdateLeaveType(element.id)">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button mat-icon-button color="warn" class="warn" (click)="openDeleteLeaveType(element.id)">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+
+        </tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[10, 20, 30]" showFirstLastButtons aria-label="Select page of Department">
+    </mat-paginator>
+    <mat-spinner *ngIf="spinner" style="margin: 0 auto;"></mat-spinner>
+</div>
