--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -18,45 +18,39 @@
 
     <div style="display: flex; justify-content:center; align-items: center;  ">
 
-        <mat-card
-            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+        <mat-card style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
             <div>
                 <div style="font-size: 1.8em; line-height: 1.8em;">Total Leave</div>
                 <div style="font-size: 1.2em">02</div>
             </div>
             <div>
-                <button style="width: 5em;height:5em;" mat-fab color="primary"
-                    aria-label="Example icon button with a delete icon">
+                <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
                     <mat-icon style="transform: scale(1.4);">people</mat-icon>
                 </button>
             </div>
 
 
         </mat-card>
-        <mat-card
-            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+        <mat-card style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
             <div>
                 <div style="font-size: 1.8em; line-height: 1.8em;">Leave Department</div>
                 <div style="font-size: 1.2em">02</div>
             </div>
             <div>
-                <button style="width: 5em;height:5em;" mat-fab color="primary"
-                    aria-label="Example icon button with a delete icon">
+                <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
                     <mat-icon style="transform: scale(1.4);">apps</mat-icon>
                 </button>
             </div>
 
 
         </mat-card>
-        <mat-card
-            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+        <mat-card style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
             <div>
                 <div style="font-size: 1.8em; line-height: 1.8em;">Leave Type</div>
                 <div style="font-size: 1.2em">02</div>
             </div>
             <div>
-                <button style="width: 5em;height:5em;" mat-fab color="primary"
-                    aria-label="Example icon button with a delete icon">
+                <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
                     <mat-icon style="transform: scale(1.4);">explorer</mat-icon>
                 </button>
             </div>
@@ -85,7 +79,7 @@
 
         <!-- Weight Column -->
         <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef>Leave Type</th>
+            <th mat-header-cell *matHeaderCellDef>Reason</th>
             <td mat-cell *matCellDef="let element">{{element.weight}}</td>
         </ng-container>
 
