--- a/src/app/component/leave-user/dialog-elements-leave.html
+++ b/src/app/component/leave-user/dialog-elements-leave.html
@@ -4,10 +4,11 @@
 
         <mat-form-field appearance="outline" style="width: 100%;">
             <mat-label>Select Leave Type</mat-label>
-            <mat-select disableRipple>
-                <mat-option value="1">Option 1</mat-option>
-                <mat-option value="2">Option 2</mat-option>
-                <mat-option value="3">Option 3</mat-option>
+            <mat-select disableRipple [(ngModel)]="empLeave.emp_leave_reason_id">
+                <mat-option value="1">Vacation</mat-option>
+                <mat-option value="2">Sick Leave</mat-option>
+                <mat-option value="3">Casual Leave</mat-option>
+                <mat-option value="4">Paternity Leave</mat-option>
             </mat-select>
         </mat-form-field>
         <!--Date-->
@@ -15,8 +16,8 @@
             <mat-form-field appearance="outline" style="width: 100%;">
                 <mat-label>Enter a date range</mat-label>
                 <mat-date-range-input [rangePicker]=" picker">
-                    <input matStartDate placeholder="Start date">
-                    <input matEndDate placeholder="End date">
+                    <input matStartDate placeholder="Start date" [(ngModel)]="empLeave.start">
+                    <input matEndDate placeholder="End date" [(ngModel)]="empLeave.end">
                 </mat-date-range-input>
                 <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -26,12 +27,12 @@
         </div>
         <mat-form-field class="example-full-width" appearance="fill" style="width: 100%;">
             <mat-label>Description</mat-label>
-            <textarea matInput placeholder="Ex. It makes me feel..." style="width: 100%;height: 100px;"></textarea>
+            <textarea matInput placeholder="Ex. It makes me feel..." style="width: 100%;height: 100px;" [(ngModel)]="empLeave.description"></textarea>
         </mat-form-field>
 
     </div>
     <div mat-dialog-actions>
         <button mat-button mat-dialog-close color="warn">Cancel</button>
-        <button mat-raised-button color="primary" style="background-color: green">APPLY</button>
+        <button mat-raised-button color="primary" style="background-color: green" (click)="createLeave()">APPLY</button>
     </div>
 </div>
