--- a/src/app/component/leave-user/leave-user.component.html
+++ b/src/app/component/leave-user/leave-user.component.html
@@ -18,45 +18,39 @@
 <div style="padding: 2em;">
     <div style="display: flex; justify-content:center; align-items: center;  ">
 
-        <mat-card
-            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+        <mat-card style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
             <div>
                 <div style="font-size: 1.8em; line-height: 1.8em;">Total Leave</div>
                 <div style="font-size: 1.2em">02</div>
             </div>
             <div>
-                <button style="width: 70px; height: 70px;" mat-fab color="primary"
-                    aria-label="Example icon button with a delete icon">
+                <button style="width: 70px; height: 70px;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
                     <mat-icon style="transform: scale(1.1);">people</mat-icon>
                 </button>
             </div>
 
 
         </mat-card>
-        <mat-card
-            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+        <mat-card style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
             <div>
                 <div style="font-size: 1.8em; line-height: 1.8em;">Monthly Leave</div>
                 <div style="font-size: 1.2em">02</div>
             </div>
             <div>
-                <button style="width: 5em;height:5em;" mat-fab color="primary"
-                    aria-label="Example icon button with a delete icon">
+                <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
                     <mat-icon style="transform: scale(1.4);">apps</mat-icon>
                 </button>
             </div>
 
 
         </mat-card>
-        <mat-card
-            style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
+        <mat-card style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
             <div>
                 <div style="font-size: 1.8em; line-height: 1.8em;">Pending Request</div>
                 <div style="font-size: 1.2em">02</div>
             </div>
             <div>
-                <button style="width: 5em;height:5em;" mat-fab color="primary"
-                    aria-label="Example icon button with a delete icon">
+                <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
                     <mat-icon style="transform: scale(1.4);">explorer</mat-icon>
                     <i class="bi bi-send-exclamation"></i>
                 </button>
@@ -73,44 +67,52 @@
     <div style="margin-top: 1em; margin-bottom: -1em;">
         <h3>Your Leave Application</h3>
     </div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 table__section">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z2 table__section" matSort>
         <!-- Position Column -->
-        <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef>No</th>
-            <td mat-cell *matCellDef="let element">{{element.position}}</td>
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>No</th>
+            <td mat-cell *matCellDef="let element">{{element.id}}</td>
         </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>Name</th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
-        </ng-container>
+        <!-- Name Column
+        <ng-container matColumnDef="employee">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+            <td mat-cell *matCellDef="let element">{{element.employee}}</td>
+        </ng-container> -->
 
         <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef>Leave Type</th>
-            <td mat-cell *matCellDef="let element">{{element.weight}}</td>
+        <ng-container matColumnDef="leave_reason">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Leave Type</th>
+            <td mat-cell *matCellDef="let element">{{element.leave_reason}}</td>
         </ng-container>
 
         <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-            <th mat-header-cell *matHeaderCellDef>Posting Date</th>
-            <td mat-cell *matCellDef="let element">{{element.symbol}}</td>
+        <ng-container matColumnDef="from">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Start From</th>
+            <td mat-cell *matCellDef="let element">{{element.start.date | date: "yyyy-MM-dd"}}</td>
+        </ng-container>
+        <ng-container matColumnDef="to">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>To</th>
+            <td mat-cell *matCellDef="let element">{{element.end.date | date: "yyyy-MM-dd"}}</td>
+        </ng-container>
+        <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+            <td mat-cell *matCellDef="let element">{{element.description ?? "No description"}}</td>
         </ng-container>
         <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
             <td mat-cell *matCellDef="let element">
                 <div>Pending</div>
 
             </td>
         </ng-container>
-        <ng-container matColumnDef="duration">
+        <!-- <ng-container matColumnDef="duration">
             <th mat-header-cell *matHeaderCellDef>Duration</th>
             <td mat-cell *matCellDef="let element">
                 <div>3hrs</div>
 
             </td>
-        </ng-container>
+        </ng-container> -->
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
@@ -124,9 +126,6 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;">
 
         </tr>
-
-
-
     </table>
 
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
