--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -31,18 +31,6 @@
                             <h3>Leave</h3>
                         </a>
                     </mat-list-item>
-                    <mat-list-item>
-                        <a style="margin-left: -16px; padding: 10px 3.2rem 10px 16px" routerLink="/employee/department" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                            <!-- <mat-icon>people</mat-icon> -->
-                            <h3>Department</h3>
-                        </a>
-                    </mat-list-item>
-                    <mat-list-item>
-                        <a style="margin-left: -16px; padding: 10px 4rem 10px 16px" routerLink="/employee/position" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                            <!-- <mat-icon>people</mat-icon> -->
-                            <h3>Position</h3>
-                        </a>
-                    </mat-list-item>
                 </div>
             </mat-list>
             <a mat-list-item routerLink="/attendance" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
@@ -92,15 +80,27 @@
                         </a>
                     </mat-list-item>
                     <mat-list-item>
+                        <a style="margin-left: -16px; padding: 10px 3.2rem 10px 16px" routerLink="/employee/department" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            <!-- <mat-icon>people</mat-icon> -->
+                            <h3>Department</h3>
+                        </a>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <a style="margin-left: -16px; padding: 10px 4rem 10px 16px" routerLink="/employee/position" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            <!-- <mat-icon>people</mat-icon> -->
+                            <h3>Position</h3>
+                        </a>
+                    </mat-list-item>
+                    <mat-list-item>
                         <a style="margin: -16px; padding: 10px 1.25rem 10px 16px;" routerLink="/change password" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <!-- <mat-icon>people</mat-icon> -->
                             <h4>Change password</h4>
                         </a>
                     </mat-list-item>
                     <mat-list-item>
-                        <a routerLink="/employee/detail/1" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                        <a style="margin: -16px; padding: 10px 1.25rem 10px 16px;" routerLink="/employee/detail/1" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <!-- <mat-icon>people</mat-icon> -->
-                            <h3>Employee</h3>
+                            <h3>Update profile</h3>
                         </a>
                     </mat-list-item>
                 </div>
