--- a/src/app/navigation-user/navigation-user.component.html
+++ b/src/app/navigation-user/navigation-user.component.html
@@ -53,15 +53,15 @@
                 </mat-list-item>
                 <div style="padding: 0 0 0 40px;" class="subsetting" [ngClass]="{'expanded' : showSetting}">
                     <mat-list-item>
-                        <a style="margin: -16px; padding: 10px 3.8rem 10px 16px;" routerLink="/employee/detail/1" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                            <!-- <mat-icon>people</mat-icon> -->
-                            <h3>Profile setting</h3>
-                        </a>
-                    </mat-list-item>
-                    <mat-list-item>
                         <a style="margin: -16px; padding: 10px 1.25rem 10px 16px;" routerLink="/change password" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                             <!-- <mat-icon>people</mat-icon> -->
                             <h4>Change password</h4>
+                        </a>
+                    </mat-list-item>
+                    <mat-list-item>
+                        <a style="margin: -16px; padding: 10px 3.8rem 10px 16px;" routerLink="/employee/detail/1" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                            <!-- <mat-icon>people</mat-icon> -->
+                            <h3>Update Profile</h3>
                         </a>
                     </mat-list-item>
                 </div>
