--- a/src/app/component/employee-leave/dialog-employee-leave.html
+++ b/src/app/component/employee-leave/dialog-employee-leave.html
@@ -2,13 +2,12 @@
     <h1 mat-dialog-title>Leave Admin</h1>
     <div mat-dialog-content>
         <span>Status: </span>
-        <button mat-raised-button color="primary" disabled=""
-            style="padding: 0px 8px;margin-bottom: 12px; color: #3f51b5;">Approved</button>
+        <input type="hidden" />
+        <button mat-raised-button color="primary" disabled="" style="padding: 0px 8px;margin-bottom: 12px; color: #3f51b5;">Approved</button>
         <div>
             <mat-form-field class="example-full-width" appearance="outline" style="width: 100%;">
                 <mat-label>Choose Name</mat-label>
-                <input type="text" [(ngModel)]="default" aria-label="Name" matInput [formControl]="myControl"
-                    [matAutocomplete]="auto">
+                <input type="text" [(ngModel)]="default" aria-label="Name" matInput [formControl]="myControl" [matAutocomplete]="auto">
                 <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
                     <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
                         {{option}}
