--- a/src/app/component/employee-leave/dialog-edit-employee-leave.html
+++ b/src/app/component/employee-leave/dialog-edit-employee-leave.html
@@ -5,7 +5,7 @@
         <input type="hidden" />
         <mat-form-field appearance="outline" color="primary" style="padding: 0px 8px;margin-bottom: 12px; color: #3f51b5; width: 80px;">
             <mat-label>Type</mat-label>
-            <mat-select disableRipple [(value)]="empLeave.status">
+            <mat-select disableRipple [(value)]="empLeave.status" [formControl]="email">
                 <mat-option value="1">Approved</mat-option>
                 <mat-option value="2">Pendding</mat-option>
                 <mat-option value="3">Cancel</mat-option>
