--- a/src/app/component/profile-user/personal-information-dialog.html
+++ b/src/app/component/profile-user/personal-information-dialog.html
@@ -1,27 +1,27 @@
 <div style="width: 22vw; padding: 1em">
     <h1 mat-dialog-title>Personal Information</h1>
-    <form>
+    <form [formGroup]="formGroup">
         <div mat-dialog-content>
             <mat-form-field appearance="outline" style="width: 100%;">
                 <mat-label>Phone Number</mat-label>
-                <input matInput required [(ngModel)]="personal.tel" [formControl]="email">
+                <input matInput required [(ngModel)]="personal.phone" formControlName="phone">
             </mat-form-field>
             <mat-form-field appearance="outline" style="width: 100%;">
                 <mat-label>Nationality</mat-label>
-                <input matInput placeholder="">
+                <input matInput required [(ngModel)]="personal.nationality" formControlName="nationality">
             </mat-form-field>
             <mat-form-field appearance="outline" style="width: 100%;">
                 <mat-label>Religion</mat-label>
-                <input matInput placeholder="">
+                <input matInput [(ngModel)]="personal.religion" formControlName="religion">
             </mat-form-field>
 
-            <mat-form-field appearance="outline" style="width: 100%;">
-                <mat-label>Married</mat-label>
-                <mat-select value="one">
-                    <mat-option value="one">Yes</mat-option>
-                    <mat-option value="two">No</mat-option>
-                </mat-select>
-            </mat-form-field>
+            <label for="married">Are you married?</label>
+            <mat-radio-group aria-label="Select an option" name="married" [(ngModel)]="personal.is_married">
+                <mat-radio-button style="margin-left: 10px;" value="1" checked="{{ personal.is_married }}">Yes
+                </mat-radio-button>
+                <mat-radio-button style="margin-left: 5px;" value="0" checked="{{ !personal.is_married }}">No
+                </mat-radio-button>
+            </mat-radio-group>
 
         </div>
         <div mat-dialog-actions>
