--- a/src/app/component/employee-leave/employee-leave.component.html
+++ b/src/app/component/employee-leave/employee-leave.component.html
@@ -21,7 +21,7 @@
         <mat-card style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
             <div>
                 <div style="font-size: 1.8em; line-height: 1.8em;">Total Leave</div>
-                <div style="font-size: 1.2em">02</div>
+                <div style="font-size: 1.2em">{{ total_leave }}</div>
             </div>
             <div>
                 <button style="width: 5em;height:5em;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
