--- a/src/app/component/leave-user/leave-user.component.html
+++ b/src/app/component/leave-user/leave-user.component.html
@@ -21,7 +21,7 @@
         <mat-card style="margin: 1%; width: 31%;height: 5em; display:  flex;justify-content: space-between; align-items: center;">
             <div>
                 <div style="font-size: 1.8em; line-height: 1.8em;">Total Leave</div>
-                <div style="font-size: 1.2em">02</div>
+                <div style="font-size: 1.2em">{{ total_leave }}</div>
             </div>
             <div>
                 <button style="width: 70px; height: 70px;" mat-fab color="primary" aria-label="Example icon button with a delete icon">
@@ -113,12 +113,17 @@
 
             </td>
         </ng-container> -->
-        <ng-container matColumnDef="actions">
+        <ng-container matColumnDef="actions" *ngIf="showFail">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
                 <mat-icon color="primary">remove_red_eye</mat-icon>
-                <mat-icon color="primary">edit</mat-icon>
-                <mat-icon style="margin-left: 5px;" color="warn">delete</mat-icon>
+                <mat-icon color="primary" (click)="openEditDialog(element.id)">edit</mat-icon>
+                <mat-icon style="margin-left: 5px;" color="warn" (click)="openDeleteDialog(element.id)">delete</mat-icon>
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="actions" *ngIf="!showFail">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let element">
             </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns">
