--- a/src/app/component/profile-user/bank-information-dialog.html
+++ b/src/app/component/profile-user/bank-information-dialog.html
@@ -1,1 +1,25 @@
-<div>sdfadfdf</div>
+<div style="width: 22vw; padding: 1em">
+    <h1 mat-dialog-title>Personal Information</h1>
+    <form [formGroup]="formGroup">
+        <div mat-dialog-content>
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <mat-label>Bank Name</mat-label>
+                <input matInput required [(ngModel)]="updateBank.bank" formControlName="bank" name="phone">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <mat-label>Account Number</mat-label>
+                <input matInput required [(ngModel)]="updateBank.bank_no" formControlName="bank_no" name="nationality">
+            </mat-form-field>
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <mat-label>Account Name</mat-label>
+                <input matInput [(ngModel)]="updateBank.bank_name" formControlName="bank_name">
+            </mat-form-field>
+
+
+        </div>
+        <div mat-dialog-actions>
+            <button mat-button mat-dialog-close color="warn">Cancel</button>
+            <button type="submit" mat-raised-button color="primary" (click)="updateBankInfo()">OK</button>
+        </div>
+    </form>
+</div>
